frontend/assets/styles.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

// Layout -----------------------------------------------

:root {
  --column-width: 72px;
  --gutter-width: 24px;
  --container-width: calc(
    (var(--column-width) * 12) + (var(--gutter-width) * 11)
  );
}

// Fonts -----------------------------------------------

body {
  font-family: "Inter", sans-serif;
  color: var(--color-cold-night) !important;
}

h1 {
  font-size: 32px !important;
  font-weight: 700 !important; // Bold
  color: var(--color-cold-night) !important;
}

h2 {
  font-size: 20px !important;
  font-weight: 600 !important; // Medium
  color: var(--color-cold-night) !important;
}

h3 {
  font-size: 16px !important;
  font-weight: 600 !important; // Medium
  color: var(--color-cold-night) !important;
}

a {
  color: var(--color-cold-purple);
  text-decoration: none !important;
  font-weight: 400; // Regular
}

.title-container {
  width: 100%;
  text-align: center;
}

.copy {
  @extend .result-value-small;
  margin-top: 24px !important;
  margin-bottom: 24px !important;
}

.markdown-body h2 > a,
.markdown-body h3 > a,
.prose h2 > a,
.prose h3 > a,
.content h2 > a,
.content h3 > a {
  color: inherit !important;
  text-decoration: none;
}

h1 > a,
h2 > a,
h3 > a,
h4 > a,
h5 > a,
h6 > a {
  font-weight: inherit !important;
  color: inherit !important;
  text-decoration: none !important;
}

// Lists
ol {
  list-style: decimal !important; // Ensure numbers appear
}

ul {
  list-style-type: disc !important;
  margin: 0 !important;
  padding: 0.5rem 0 1.5rem 1.5rem !important;
}

li {
  margin: 0 !important;
}

li::marker {
  color: var(--color-cold-night) !important;
}

.prose {
  font-size: 14px !important;
  line-height: 28px !important;
  color: var(--color-cold-night) !important;
}

.prose li {
  margin-bottom: 12px !important;
  color: var(--color-cold-night) !important;
}

.prose strong,
.prose b {
  color: inherit; /* Inherit the color from the parent element */
  font-weight: 600 !important; // Medium
}

// Labels
.label {
  font-size: 0.725rem;
  font-weight: 500;
  text-transform: uppercase;
  color: var(--color-cold-night);
}

.label-key {
  @extend .label;
  padding: 0;
}

.label-key-provision-article {
  @extend .label-key;
  font-size: 14px !important;
  text-transform: none;
}

.label-key-provision-toggle {
  @extend .label-key;
  font-weight: 600 !important;
  text-transform: capitalize;
  font-size: 10px !important;
  @apply text-sm text-gray-600;
}

.label-jurisdiction {
  @extend .label;
  background-color: var(--color-cold-gray-alpha);
  padding: 3px 7px;
  display: inline-flex;
  align-items: center;
  flex-shrink: 0;
}

.label-question {
  @extend .label;
  color: var(--color-label-question);
  padding: 2px 6px;
  background-color: color-mix(
    in srgb,
    var(--color-label-question) 5%,
    transparent
  );
  border: none;
  transition: background-color 0.2s ease;

  &:hover {
    background-color: color-mix(
      in srgb,
      var(--color-label-question) 10%,
      transparent
    );
  }
}

.label-court-decision {
  @extend .label;
  color: var(--color-label-court-decision);
  padding: 2px 6px;
  background-color: color-mix(
    in srgb,
    var(--color-label-court-decision) 5%,
    transparent
  );
  border: none;
  transition: background-color 0.2s ease;

  &:hover {
    background-color: color-mix(
      in srgb,
      var(--color-label-court-decision) 10%,
      transparent
    );
  }
}

.label-instrument {
  @extend .label;
  color: var(--color-label-instrument);
  padding: 2px 6px;
  background-color: color-mix(
    in srgb,
    var(--color-label-instrument) 5%,
    transparent
  );
  border: none;
  transition: background-color 0.2s ease;

  &:hover {
    background-color: color-mix(
      in srgb,
      var(--color-label-instrument) 10%,
      transparent
    );
  }
}

.label-literature {
  @extend .label;
  color: var(--color-label-literature);
  padding: 2px 6px;
  background-color: color-mix(
    in srgb,
    var(--color-label-literature) 5%,
    transparent
  );
  border: none;
  transition: background-color 0.2s ease;

  &:hover {
    background-color: color-mix(
      in srgb,
      var(--color-label-literature) 10%,
      transparent
    );
  }
}

.label-arbitration {
  @extend .label;
  color: var(--color-label-arbitration);
  padding: 2px 6px;
  background-color: color-mix(
    in srgb,
    var(--color-label-arbitration) 5%,
    transparent
  );
  border: none;
  transition: background-color 0.2s ease;

  &:hover {
    background-color: color-mix(
      in srgb,
      var(--color-label-arbitration) 10%,
      transparent
    );
  }
}

.label-theme {
  @extend .label;
  color: var(--color-cold-night);
  background-color: color-mix(
    in srgb,
    var(--color-cold-night-alpha-25) 20%,
    transparent
  );
  padding: 2px 6px;
  border: none;
  transition: background-color 0.2s ease;

  &:hover {
    background-color: color-mix(
      in srgb,
      var(--color-cold-night-alpha-25) 40%,
      transparent
    );
  }
}

// Results
.result-value {
  font-weight: 700 !important; // Bold
  color: var(--color-cold-night);
  word-wrap: break-word; // Allows breaking within words if necessary
  word-break: break-word; // Breaks words that are too long
  white-space: pre-wrap; // Preserves whitespace and line breaks, but also allows wrapping
}

.result-value-large {
  @extend .result-value;
  font-size: 28px !important;
  line-height: 34px !important;
}

.result-value-medium {
  @extend .result-value-large;
  font-size: 20px !important;
  line-height: 28px !important;
}

.result-value-small {
  @extend .result-value-large;
  font-size: 14px !important;
  font-weight: 400 !important; // Regular
  line-height: 26px !important;
  white-space: normal;
}
/* ... */

